# SibTask6

./: .gitignore  README.md
backend/: alembic.ini  database.py  main.py  models.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 69d424c014bd_empty_revision.py  966fc7495608_create_tasks_table.py
backend/backend/: __init__.py
backend/demo_auth/: views.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  main.css  main.js
frontend/src/components/: TheTaskList.vue
frontend2/: about.txt
frontend2/src/: App.vue  main.ts
frontend2/src/components/: TheTaskList.vue
